k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agricloud-frontend
  namespace: agricloud
  labels:
    app: agricloud-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: agricloud-frontend
  template:
    metadata:
      labels:
        app: agricloud-frontend
    spec:
      containers:
        - name: agricloud-frontend
          image: umamaayyubi817/agricloud:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
