k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agricloud-frontend-ingress
  namespace: agricloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: agricloud.54.165.36.165.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agricloud-frontend-service
                port:
                  number: 80
